# mimmy

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
deploy/: ec2-setup.sh  push-and-restart.sh
deploy/systemd/: mimmy-bot.service  mimmy-dashboard.service  mimmy.service
src/mimmy/: __init__.py  config.py  logging.py  main.py  secrets.py
src/mimmy/agents/: __init__.py  base.py  disclosure_analyst.py  evaluator.py  llm.py  market_analyst.py  news_analyst.py  orchestrator.py  risk.py  trader.py
src/mimmy/core/: __init__.py  types.py
src/mimmy/dashboard/: __init__.py  app.py
src/mimmy/dashboard/static/: app.js  index.html  manifest.webmanifest  style.css  sw.js
src/mimmy/data/: disclosure.py  http.py  news.py  prices.py
src/mimmy/data/sources/: dart.py  naver_finance.py
src/mimmy/instruments/: __init__.py  resolver.py
src/mimmy/markets/: __init__.py  base.py  cn.py  hk.py  kr.py  registry.py  us.py
src/mimmy/runtime/: evaluator_loop.py  loop.py  store.py
src/mimmy/self_edit/: __init__.py  editor.py  pipeline.py
src/mimmy/telegram_bot/: __init__.py  auth.py  bot.py  handlers.py
src/mimmy/trading/: __init__.py  broker.py  kis.py  portfolio.py  strategy.py
tests/: test_dart_parsing.py  test_dashboard_api.py  test_evaluator_metrics.py  test_instruments.py  test_kis_broker.py  test_naver_parsing.py  test_portfolio.py  test_rate_limiter.py  test_risk.py  test_state_machine.py
